[workspace]
resolver = "2"
members = [
    "cmd/nulld",
    "cmd/nullctl",
    "pkg/cage",
    "pkg/egress",
    "pkg/ctxgraph",
    "pkg/warden",
    "pkg/test-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nullbox-os/nullbox"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
