[package]
name = "nulld"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nulld"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["mount", "signal", "process", "fs"] }
toml = "0.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
