[package]
name = "cage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cage"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
nix = { version = "0.29", features = ["mount", "sched", "process", "fs"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
