[package]
name = "ctxgraph"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ctxgraph"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
log = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
