[package]
name = "egress"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "egress"
path = "src/lib.rs"

[[bin]]
name = "egress"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
