[package]
name = "warden"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "warden"
path = "src/lib.rs"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
